feat: adding vp in status response
